# Neon-Element

./: .classpath  .gitignore  README.md  alien8.plantuml  component.puml  index.html  style.css
neon-element-cpp/: CMakeLists.txt  plan.md
neon-element-cpp/cmake/: CompilerFlags.cmake
neon-element-cpp/src/: main.cpp
neon-element-cpp/src/audio/: AudioManager.hpp  Music.hpp  Sound.hpp
neon-element-cpp/src/client/: GameClient.cpp  GameClient.hpp  InputHandler.hpp
neon-element-cpp/src/core/: Circle.hpp  Clock.hpp  Rect.hpp  Transform2D.hpp  Vec2.hpp
neon-element-cpp/src/engine/calculations/: DamageCalculation.hpp
neon-element-cpp/src/engine/controller/: GameTypeHandler.hpp  PowerUpController.hpp  RespawnController.hpp
neon-element-cpp/src/engine/entities/: Character.cpp  Character.hpp  CooldownSystem.hpp  PhysicsObject.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  Wall.cpp  Wall.hpp
neon-element-cpp/src/engine/model/: AttackTimes.hpp  ClientGameState.cpp  ClientGameState.hpp  GameState.cpp  GameState.hpp  GameType.hpp  Map.hpp  ScoreBoard.cpp  ScoreBoard.hpp  ServerGameState.cpp  ServerGameState.hpp
neon-element-cpp/src/engine/physics/: CollisionDetector.hpp  PhysicsController.cpp  PhysicsController.hpp
neon-element-cpp/src/graphics/: ColorSwitch.hpp  ISOConverter.hpp  Renderer.cpp  Renderer.hpp
neon-element-cpp/src/networking/: Constants.hpp  Network.hpp  NetworkDispatcher.hpp  Packet.hpp  PacketFactory.hpp  PacketType.hpp
neon-element-cpp/src/server/: GameServer.cpp  GameServer.hpp
neon-element-cpp/src/ui/: GameOverScreen.cpp  GameOverScreen.hpp  HUD.cpp  HUD.hpp  HelpScreen.cpp  HelpScreen.hpp  LobbyScreen.cpp  LobbyScreen.hpp  LocalSetupScreen.cpp  LocalSetupScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  ModeScreen.cpp  ModeScreen.hpp  OnlineModeScreen.cpp  OnlineModeScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  PauseOverlay.cpp  PauseOverlay.hpp  Screen.hpp  UIManager.cpp  UIManager.hpp  Widget.cpp  Widget.hpp
neon-element-cpp/tests/: CMakeLists.txt  test_core.cpp
(+555 files in other folders)
